[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/local_agents/scenes/simulation/ui/SimulationHud.gd" id="1_hud"]

[node name="SimulationHud" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_right = 0.0
offset_left = 16.0
offset_top = 16.0
offset_right = 332.0
offset_bottom = 118.0

[node name="GraphicsButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -216.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 46.0
grow_horizontal = 0
text = "Graphics"

[node name="GraphicsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -356.0
offset_top = 54.0
offset_right = -16.0
offset_bottom = 438.0
grow_horizontal = 0

[node name="GraphicsMargin" type="MarginContainer" parent="GraphicsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GraphicsScroll" type="ScrollContainer" parent="GraphicsPanel/GraphicsMargin"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GraphicsVBox" type="VBoxContainer" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="WaterShaderCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Water Shader"

[node name="OceanSurfaceCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Ocean Surface"

[node name="RiverOverlaysCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "River Overlays"

[node name="RainPostFxCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Rain PostFX"

[node name="CloudsCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Clouds"

[node name="ShadowsCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Shadows"

[node name="SsrCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "SSR"

[node name="SsaoCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "SSAO"

[node name="SsilCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "SSIL"

[node name="SdfgiCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "SDFGI"

[node name="GlowCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Glow"

[node name="FogCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Fog"

[node name="VolumetricFogCheck" type="CheckBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Volumetric Fog"

[node name="CloudQualityRow" type="HBoxContainer" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
layout_mode = 2

[node name="CloudQualityLabel" type="Label" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudQualityRow"]
layout_mode = 2
text = "Cloud Quality"

[node name="CloudQualityOption" type="OptionButton" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudQualityRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CloudDensityRow" type="HBoxContainer" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
layout_mode = 2

[node name="CloudDensityLabel" type="Label" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudDensityRow"]
layout_mode = 2
text = "Cloud Density"

[node name="CloudDensitySlider" type="HSlider" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudDensityRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.2
max_value = 2.0
step = 0.05
value = 0.25

[node name="CloudDensitySpin" type="SpinBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudDensityRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.2
max_value = 2.0
step = 0.05
value = 0.25
custom_arrow_step = 0.05

[node name="RainVisualRow" type="HBoxContainer" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
layout_mode = 2

[node name="RainVisualLabel" type="Label" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/RainVisualRow"]
layout_mode = 2
text = "Rain Visual"

[node name="RainVisualSlider" type="HSlider" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/RainVisualRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.5
step = 0.05
value = 0.25

[node name="RainVisualSpin" type="SpinBox" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/RainVisualRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 1.5
step = 0.05
value = 0.25
custom_arrow_step = 0.05

[node name="PerformanceModeButton" type="Button" parent="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Performance Mode"

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_font_sizes/font_size = 10

[node name="PerfLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "FPS -- | RAM -- | VRAM -- | Obj -- | Draw --"

[node name="SimTimingLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "SimTiming --"

[node name="StatusLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Ages Sim: idle"

[node name="DetailsLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = "Branch diff: n/a"

[node name="Buttons" type="HBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "Play"

[node name="PauseButton" type="Button" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "Pause"

[node name="RewindButton" type="Button" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "Rewind"

[node name="FastForwardButton" type="Button" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "FF"

[node name="ForkButton" type="Button" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "Fork"

[node name="InspectorTitle" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
visible = false
text = "Inspector"

[node name="InspectorControls" type="HBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
visible = false

[node name="InspectorNpcEdit" type="LineEdit" parent="Panel/Margin/VBox/InspectorControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "npc id (e.g. npc_vs_0)"

[node name="InspectorApplyButton" type="Button" parent="Panel/Margin/VBox/InspectorControls"]
layout_mode = 2
text = "Inspect"

[node name="OverlayTitle" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
visible = false
text = "Debug Overlays"

[node name="OverlayGrid" type="GridContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
visible = false
columns = 3

[node name="PathToggle" type="CheckBox" parent="Panel/Margin/VBox/OverlayGrid"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Paths"

[node name="ResourceToggle" type="CheckBox" parent="Panel/Margin/VBox/OverlayGrid"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Resources"

[node name="ConflictToggle" type="CheckBox" parent="Panel/Margin/VBox/OverlayGrid"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Conflicts"

[node name="SmellToggle" type="CheckBox" parent="Panel/Margin/VBox/OverlayGrid"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Smell"

[node name="WindToggle" type="CheckBox" parent="Panel/Margin/VBox/OverlayGrid"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Wind"

[node name="TemperatureToggle" type="CheckBox" parent="Panel/Margin/VBox/OverlayGrid"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Temp"

[connection signal="pressed" from="Panel/Margin/VBox/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Buttons/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Buttons/RewindButton" to="." method="_on_rewind_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Buttons/FastForwardButton" to="." method="_on_fast_forward_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Buttons/ForkButton" to="." method="_on_fork_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/InspectorControls/InspectorApplyButton" to="." method="_on_inspector_apply_button_pressed"]
[connection signal="text_submitted" from="Panel/Margin/VBox/InspectorControls/InspectorNpcEdit" to="." method="_on_inspector_npc_edit_text_submitted"]
[connection signal="toggled" from="Panel/Margin/VBox/OverlayGrid/PathToggle" to="." method="_on_overlay_toggled"]
[connection signal="toggled" from="Panel/Margin/VBox/OverlayGrid/ResourceToggle" to="." method="_on_overlay_toggled"]
[connection signal="toggled" from="Panel/Margin/VBox/OverlayGrid/ConflictToggle" to="." method="_on_overlay_toggled"]
[connection signal="toggled" from="Panel/Margin/VBox/OverlayGrid/SmellToggle" to="." method="_on_overlay_toggled"]
[connection signal="toggled" from="Panel/Margin/VBox/OverlayGrid/WindToggle" to="." method="_on_overlay_toggled"]
[connection signal="toggled" from="Panel/Margin/VBox/OverlayGrid/TemperatureToggle" to="." method="_on_overlay_toggled"]
[connection signal="pressed" from="GraphicsButton" to="." method="_on_graphics_button_pressed"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/WaterShaderCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/OceanSurfaceCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/RiverOverlaysCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/RainPostFxCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudsCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/ShadowsCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/SsrCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/SsaoCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/SsilCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/SdfgiCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/GlowCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/FogCheck" to="." method="_on_graphics_toggle"]
[connection signal="toggled" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/VolumetricFogCheck" to="." method="_on_graphics_toggle"]
[connection signal="item_selected" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudQualityRow/CloudQualityOption" to="." method="_on_cloud_quality_selected"]
[connection signal="value_changed" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudDensityRow/CloudDensitySlider" to="." method="_on_cloud_density_slider_changed"]
[connection signal="value_changed" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/CloudDensityRow/CloudDensitySpin" to="." method="_on_cloud_density_spin_changed"]
[connection signal="value_changed" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/RainVisualRow/RainVisualSlider" to="." method="_on_rain_visual_slider_changed"]
[connection signal="value_changed" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/RainVisualRow/RainVisualSpin" to="." method="_on_rain_visual_spin_changed"]
[connection signal="pressed" from="GraphicsPanel/GraphicsMargin/GraphicsScroll/GraphicsVBox/PerformanceModeButton" to="." method="_on_performance_mode_button_pressed"]
